# chess2

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build_web.sh  index.html  index_en.html  index_fr.html
.cargo/: config.toml
css/: index.css
js/: index.js
src/: board.rs  io_standard.rs  io_wasm.rs  lib.rs  logic.rs  main.rs  sets.rs  turns.rs  ui.rs  utils.rs
