[package]
name = "chess2"
version = "0.1.0"
edition = "2021"
wasm = true

[dependencies]
ndarray = "0.15"
wasm-bindgen = "0.2"

[dependencies.bevy]
version = "0.11"
features = [
  "jpeg"
]

[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
version = "0.11"
features = ["dynamic_linking"]

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3