[package]
name = "chess2"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
ndarray = "0.15"
wasm-bindgen = "0.2"

[dependencies.bevy]
version = "0.11"
features = [
  "jpeg"
]

[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
version = "0.11"
features = [
  "dynamic_linking"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = "thin"
