[package]
name = "chess2"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
wasm-bindgen = "0.2"

[dependencies.bevy]
version = "0.13"
default-features = false
features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_sprite",
  "png",
  "webgl2",
  "webp",
]

[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
version = "0.13"
features = [
  "multi-threaded",
  "dynamic_linking"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 'z'

[profile.release]
opt-level = 'z'
